force-app/main/default/objects/Visiting_Card_Setting__mdt/Visiting_Card_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Visiting Card OCR adapter (Workstream 1). One record named Default is read by VisitingCardOcrService.</description>
    <label>Visiting Card Setting</label>
    <pluralLabel>Visiting Card Settings</pluralLabel>
</CustomObject>