force-app/main/default/objects/Visiting_Card_Setting__mdt/fields/Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Path__c</fullName>
    <description>Path appended to the Named Credential URL (e.g. /api/extract).</description>
    <label>Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>