force-app/main/default/objects/Visiting_Card_Setting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Developer name of the Named Credential used by the Http provider.</description>
    <label>Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>