force-app/main/default/objects/Visiting_Card_Setting__mdt/fields/OCR_Provider__c.field-meta.xml
<CustomField>
    <fullName>OCR_Provider__c</fullName>
    <description>Which OcrProvider implementation VisitingCardOcrService instantiates.</description>
    <label>OCR Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mock</fullName>
                <default>true</default>
                <label>Mock</label>
            </value>
            <value>
                <fullName>Http</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>