force-app/main/default/objects/Visiting_Card_Setting__mdt/fields/Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Seconds__c</fullName>
    <description>HTTP callout timeout for the OCR service (max 120).</description>
    <label>Timeout Seconds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>